mailhog-gke/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress-controller
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
    - name: https
      port: 443
      protocol: TCP
      targetPort: https
  selector:
    app: nginx-ingress
  type: LoadBalancer
