mailhog-gke/ingress-traefik.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mailhog-traefik
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: "mailhog-traefik.eni.yannig.ovh"
    http:
      paths:
      - path: /
        backend:
          serviceName: mailhog
          servicePort: 8025
